--- a/style.css
+++ b/style.css
@@ -47,7 +47,9 @@ nav {
 .burger div {
     width: 25px;
     height: 3px;
-    background-color: rgb(226, 226, 226) margin, 5px;
+    background-color: rgb(226, 226, 226; 
+    margin: 5px;
+    translation:all 0.3s ease;
 }
 
 @media screen and (max-width:1024px) {
@@ -94,4 +96,13 @@ nav {
         opacity: 1;
         transform: translateX(0px);
     }
+}
+.toggle .line1{
+transform: rotate(-45deg) translate(-5px,6px);
+}
+.toggle .line2{
+opacity: 0;
+}
+.toggle .line3{
+    transform: rotate(45deg) translate(-5px,-6px);
 }
